fix:merename dari book-catalog menjadi script-labs
